k8s/5-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: jsfriends
spec:
  replicas: 2
  selector: 
    matchLabels:
      section: front
  template:
    metadata: 
      labels:
        app: jsfriends
        section: front
    spec:
      containers:
        - name: front
          image: joellord/jsfriends-front:latest
          ports: 
          - containerPort: 8080
