k8s/6-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: jsfriends
spec:
  selector:
    section: front
  ports:
    - port: 8080
      protocol: TCP
