k8s/8-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: jsfriends
spec:
  replicas: 1
  selector: 
    matchLabels:
      section: api
  template:
    metadata: 
      labels:
        app: jsfriends
        section: api
    spec:
      containers:
        - name: api
          image: joellord/jsfriends-api:latest
          ports: 
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: jsfriends
spec:
  selector:
    section: api
  ports:
    - port: 3000
      protocol: TCP
